# console_listener

./: .gitignore  .gitmodules  CMakeLists.txt  CheckSystem.cmake  README.MD  build.sh  install_libs.sh  main.cpp
Core/: common.h  lockfile.hpp  main.cpp  serial_port_listener.h
include/: common.h  serial_port_listener.h
src/: main.cpp  serial_port_listener.cpp
